--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             transform: translateY(0);
         }
         section img {
-            max-width: 350px;
+            max-width: 250px;
             height: auto;
             border-radius: 10px;
             transition: transform 0.3s ease, opacity 0.3s ease;
@@ -53,21 +53,21 @@
         }
         section h2 {
             font-family: 'Baloo 2', cursive;
-            font-size: 5em;
+            font-size: 2.5em;
             text-transform: uppercase;
             margin: 0 0 10px;
             letter-spacing: 2px;
             color: #0056b3;
         }
         section .hook {
-            font-size: 1.5em;
+            font-size: 1.2em;
             color: #FF9800;
             max-width: 500px;
             line-height: 1.6;
             margin-bottom: 15px;
         }
         section p {
-            font-size: 1.2em;
+            font-size: 1em;
             max-width: 500px;
             line-height: 1.6;
             text-align: justify;
@@ -103,6 +103,40 @@
             line-height: 1.8;
             color: #555;
         }
+        @media (min-width: 768px) {
+            section img {
+                max-width: 350px;
+            }
+            section h2 {
+                font-size: 3.5em;
+            }
+            section .hook {
+                font-size: 1.4em;
+                max-width: 500px;
+            }
+            section p {
+                font-size: 1.2em;
+                max-width: 500px;
+            }
+            #intro h1 {
+                font-size: 4em;
+            }
+            #intro p {
+                font-size: 1.5em;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            section h2 {
+                font-size: 5em;
+            }
+            section .hook {
+                font-size: 1.5em;
+            }
+            section p {
+                font-size: 1.2em;
+            }
+        }
     </style>
 </head>
 <body>
@@ -120,7 +154,7 @@
     <div data-lang="vi">
         <h1 style="text-align: center; color: #FF9800; margin-bottom: 10px;">CHÀO MỪNG ĐẾN VỚI GIA ĐÌNH M.PEG</h1>
         <h1 style="text-align: center; color: #0056b3; margin-top: 0;">CHẮP CÁNH GIẤC MƠ TÀI CHÍNH</h1>
-        <p style="font-size: 1.2em; line-height: 1.8; max-width: 1000px; margin: 0 auto; text-align: justify; margin-bottom: 20px;">
+        <p style="font-size: 1em; line-height: 1.6; max-width: 90%; margin: 0 auto; text-align: justify; margin-bottom: 20px;">
             Gia đình của các bạn Thiên Mã (Pegasus) - <b>M.Peg</b> gồm bốn thành viên đặc biệt: <b>Mira, Neo, Crea, và Max</b>. Mỗi thành viên mang một cá tính và ý nghĩa riêng, cùng chung tay lan tỏa thông điệp về <b>niềm tin, sự đổi mới, sáng tạo và kiên trì</b> trong hành trình đầu tư tài chính.
         </p>
         <p style="font-size: 1.2em; line-height: 1.8; max-width: 1000px; margin: 0 auto; text-align: justify; margin-bottom: 20px;">
