--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <div data-lang="vi">
         <h1 style="text-align: center; color: #FF9800; margin-bottom: 10px;">CHÀO MỪNG ĐẾN VỚI GIA ĐÌNH M.PEG</h1>
         <h1 style="text-align: center; color: #0056b3; margin-top: 0;">CHẮP CÁNH GIẤC MƠ TÀI CHÍNH</h1>
-        <p style="font-size: 1em; line-height: 1.6; max-width: 90%; margin: 0 auto; text-align: justify; margin-bottom: 20px;">
+        <p style="font-size: 1.2em; line-height: 1.8; max-width: 1000px; margin: 0 auto; text-align: justify; margin-bottom: 20px;">
             Gia đình của các bạn Thiên Mã (Pegasus) - <b>M.Peg</b> gồm bốn thành viên đặc biệt: <b>Mira, Neo, Crea, và Max</b>. Mỗi thành viên mang một cá tính và ý nghĩa riêng, cùng chung tay lan tỏa thông điệp về <b>niềm tin, sự đổi mới, sáng tạo và kiên trì</b> trong hành trình đầu tư tài chính.
         </p>
         <p style="font-size: 1.2em; line-height: 1.8; max-width: 1000px; margin: 0 auto; text-align: justify; margin-bottom: 20px;">
