--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
         <h2 data-lang="vi">NEO</h2>
         <h2 data-lang="en" style="display: none;">NEO</h2>
         <h2 data-lang="kr" style="display: none;">NEO</h2>
-        <div class="hook" data-lang="vi">"Khơi nguồn từ đổi mới, mở lối cho những chân trời mới."</div>
-        <div class="hook" data-lang="en" style="display: none;">"Ignite innovation, paving the way for new horizons."</div>
-        <div class="hook" data-lang="kr" style="display: none;">"혁신을 불러일으키고 새로운 지평을 여는 길을 엽니다."</div>
+        <div class="hook" data-lang="vi">"Khơi nguồn đổi mới, mở lối đến những thàn tựu vượt bậc."</div>
+        <div class="hook" data-lang="en" style="display: none;">"Ignite innovation, pave the way to remarkable achievements."</div>
+        <div class="hook" data-lang="kr" style="display: none;">"혁신의 시작, 탁월한 성과로 가는 길을 열다."</div>
         <p data-lang="vi">Neo đại diện cho sự đổi mới không ngừng, luôn sẵn sàng phá vỡ giới hạn và tìm kiếm những cơ hội mới. Với tinh thần tiên phong, Neo truyền cảm hứng để nhà đầu tư khám phá những tiềm năng chưa được khai phá và dẫn dắt hành trình đến tương lai.</p>
         <p data-lang="en" style="display: none;">Neo represents constant innovation, always ready to break boundaries and seek new opportunities. With a pioneering spirit, Neo inspires investors to explore untapped potentials and lead the journey toward the future.</p>
         <p data-lang="kr" style="display: none;">Neo는 끊임없는 혁신을 상징하며, 항상 한계를 뛰어넘고 새로운 기회를 모색할 준비가 되어 있습니다. 개척 정신으로 Neo는 투자자들에게 미개척 잠재력을 탐구하고 미래를 향한 여정을 이끌도록 영감을 줍니다.</p>
