--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <h2 data-lang="vi">NEO</h2>
         <h2 data-lang="en" style="display: none;">NEO</h2>
         <h2 data-lang="kr" style="display: none;">NEO</h2>
-        <div class="hook" data-lang="vi">"Khơi nguồn đổi mới, mở lối đến những thàn tựu vượt bậc."</div>
+        <div class="hook" data-lang="vi">"Khơi nguồn đổi mới, mở lối đến những thành tựu vượt bậc."</div>
         <div class="hook" data-lang="en" style="display: none;">"Ignite innovation, pave the way to remarkable achievements."</div>
         <div class="hook" data-lang="kr" style="display: none;">"혁신의 시작, 탁월한 성과로 가는 길을 열다."</div>
         <p data-lang="vi">Neo đại diện cho sự đổi mới không ngừng, luôn sẵn sàng phá vỡ giới hạn và tìm kiếm những cơ hội mới. Với tinh thần tiên phong, Neo truyền cảm hứng để nhà đầu tư khám phá những tiềm năng chưa được khai phá và dẫn dắt hành trình đến tương lai.</p>
